[workspace]
members = [
  "rs-mojave-network-core",
  "rs-mojave-protocol-ping",
  "rs-mojave-transport-node",
  "rs-mojave-transport-webtransport",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies
anyhow = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

asynchronous-codec = { version = "0.7", default-features = false }

axum = { version = "0.8", default-features = false }
hyper-serve = { version = "0.6", default-features = false }
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1.45", default-features = false }
tower-http = { version = "0.6", default-features = false }

clap = { version = "4.5", default-features = false }

futures = { version = "0.3", default-features = false }
futures-timer = { version = "3.0", default-features = false }

bytes = { version = "1.10", default-features = false }
hex = { version = "0.4", default-features = false }

if-addrs = { version = "0.13", default-features = false }
if-watch = { version = "3.1", default-features = false }

libp2p-identity = { version = "0.2", default-features = false }
multiaddr = { version = "0.18.2", default-features = false }

moq-native = { git = "https://github.com/kixelated/moq/", branch = "main" }
web-transport = { version = "0.9.3", default-features = false }

pin-project = { version = "1.1", default-features = false }

tracing = { version = "0.1.41", default-features = false }
tracing-log = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
tracing-test = { version = "0.2", default-features = false }
tracing-wasm = { version = "0.2", default-features = false }

url = { version = "2", default-features = false }

wasm-bindgen-futures = { version = "0.4", default-features = false }
web-time = { version = "1.1", default-features = false }

slab = { version = "0.4", default-features = false }

parking_lot = { version = "0.12", default-features = false }

semver = { version = "1.0", default-features = false }

serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

rand = { version = "0.9", default-features = false }

# Our workspace members
rs-mojave-network-core = { path = "./rs-mojave-network-core" }
rs-mojave-protocol-ping = { path = "./rs-mojave-protocol-ping" }
rs-mojave-transport-node = { path = "./rs-mojave-transport-node" }
rs-mojave-transport-webtransport = { path = "./rs-mojave-transport-webtransport" }


[workspace.lints.rust.unexpected_cfgs]
check-cfg = ['cfg(coverage)']
level = "deny"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
