[package]
name = "rs-mojave-transport-node"
version = "0.1.0"
edition = "2024"

[dependencies]
rs-mojave-network-core.workspace = true
rs-mojave-transport-webtransport.workspace = true
multiaddr.workspace = true
libp2p-identity = { workspace = true, features = ["peerid"] }
wasm-bindgen-futures.workspace = true
thiserror.workspace = true
futures = { workspace = true, features = ["executor", "thread-pool"] }
web-time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.libp2p-identity]
workspace = true
features = ["ed25519", "rand"]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
moq-native.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
