[package]
name = "rs-mojave-transport-webtransport"
version = "0.1.0"
edition = "2024"

[dependencies]
moq-transfork = { version = "0.12.0" }

thiserror = { workspace = true }

rs-mojave-network-core = { path = "../rs-mojave-network-core" }

multiaddr = "0.18.2"

anyhow = { workspace = true }

futures = { version = "0.3" }

tracing = { workspace = true }

reqwest = { version = "0.12" }

url = { version = "2" }

hex = { version = "0.4" }

libp2p-identity = { version = "0.2", features = ["peerid"] }

pin-project = "1.1"

bytes = { version = "1.10" }

asynchronous-codec = { version = "0.7" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
if-watch = { version = "3.1", features = ["tokio"] }

if-addrs = { version = "0.13" }

tokio = { workspace = true, features = ["full"] }

tower-http = { version = "0.6", features = ["cors", "trace"] }

hyper-serve = { version = "0.6", features = ["tls-rustls"] }

axum = { version = "0.8", features = ["tokio", "http2", "http1"] }

moq-native = { version = "0.6.8" }
web-transport = { version = "0.9.2" }

bytes = { version = "1.10" }


[lints]
workspace = true
